makefile adjustments for iOS
Former-commit-id: c06f4d4bcce12741e608e5572f5ced0b2253d01f

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -111,6 +111,25 @@ ifeq ($(IGL_USERNAME),chrsch)
   endif
 endif
 
+ifeq ($(IGL_USERNAME),stefanmessmer) 
+	GG=clang++
+	IGL_WITH_TETGEN=0
+	IGL_WITH_EMBREE=0
+	IGL_WITH_MATLAB=0
+	IGL_WITH_MOSEK=0
+	IGL_WITH_BBW=1
+	IGL_WITH_PNG=0
+	IGL_WITH_XML=0
+	IGL_WITH_BOOST=0
+	#OPENGL_INC=-I$(DEFAULT_PREFIX)/include
+	#OPENGL_LIB=-lGL -lGLU
+	# Glut is needed only for examples
+	#GLUT_LIB=-lglut
+	#ANTTWEAKBAR_LIB=-lAntTweakBar
+	OPENPMP = -openmp
+	AFLAGS= -DIGL_NO_MOSEK -DIGL_NO_ANTTWEAKBAR -DIGL_NO_OPENGL -arch armv7s -arch armv7 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS7.0.sdk
+endif
+
 
 
 #############################################################################
