--- a/Makefile.conf
+++ b/Makefile.conf
@@ -3,14 +3,21 @@
 #############################################################################
 UNAME := $(shell uname)
 
+GG=g++
+#GG=clang++
+#GG=/usr/bin/g++     17s
+#GG=/usr/bin/clang++ 14s
+#GG=g++-mp-4.3       15.5s
+#GG=g++-mp-4.7       19.9s
+
 CFLAGS += -Wall
 
 ifeq ($(UNAME), Linux)
-	DEFAULT_PREFIX = /usr/local/
+	DEFAULT_PREFIX=/usr/local/
 else
-	DEFAULT_PREFIX = /opt/local/
+	DEFAULT_PREFIX=/opt/local/
 	# I guess arch only works in Mac OSX
-	AFLAGS += -arch x86_64 -m64 -march=corei7-avx
+	AFLAGS+=-arch x86_64 -m64 -march=corei7-avx
 endif
 
 
@@ -34,7 +41,7 @@ ifeq ($(IGL_USERNAME),ajx)
 	# I don't use llvm
 #AFLAGS = -m64 -march="corei7-avx"
 	# msse4.2 is necessary for me to get embree to compile correctly
-	AFLAGS = -m64 -msse4.2
+	AFLAGS=-m64 -msse4.2
 	OPENMP=-fopenmp
 	EIGEN3_INC=-I$(DEFAULT_PREFIX)/include/eigen3 -I$(DEFAULT_PREFIX)/include/eigen3/unsupported
 	#EIGEN3_INC=-I/Users/ajx/Documents/eigen -I/Users/ajx/Documents/eigen/unsupported
@@ -77,7 +84,7 @@ endif
 
 ifeq ($(IGL_USERNAME),daniele)
 	IGL_WITH_MATLAB=0
-	AFLAGS = -m64
+	AFLAGS=-m64
 	#GG=g++-mp-4.8
 endif
 
@@ -108,7 +115,7 @@ ifeq ($(IGL_USERNAME),chrsch)
     GLUT_LIB=-lglut
     ANTTWEAKBAR_LIB=-lAntTweakBar
     OPENMP=-fopenmp
-    AFLAGS = -m64
+    AFLAGS=-m64
   endif
 endif
 
