--- a/Makefile.conf
+++ b/Makefile.conf
@@ -35,6 +35,7 @@ ifeq ($(IGL_USERNAME),ajx)
 	IGL_WITH_MATLAB=1
 	IGL_WITH_MOSEK=1
 	IGL_WITH_BBW=1
+	IGL_WITH_SVD3X3=1
 	IGL_WITH_PNG=1
 	IGL_WITH_XML=1
 	IGL_WITH_BOOST=1
