--- a/Makefile.conf
+++ b/Makefile.conf
@@ -130,13 +130,15 @@ ifeq ($(IGL_USERNAME),stefanmessmer)
 	IGL_WITH_PNG=0
 	IGL_WITH_XML=0
 	IGL_WITH_BOOST=0
+	IGL_WITH_SVD3X3=1
 	#OPENGL_INC=-I$(DEFAULT_PREFIX)/include
 	#OPENGL_LIB=-lGL -lGLU
 	# Glut is needed only for examples
 	#GLUT_LIB=-lglut
 	#ANTTWEAKBAR_LIB=-lAntTweakBar
 	OPENPMP = -openmp
-	AFLAGS= -DIGL_NO_MOSEK -DIGL_NO_ANTTWEAKBAR -DIGL_NO_OPENGL -arch armv7s -arch armv7 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS7.0.sdk
+	AFLAGS = -DIGL_NO_MOSEK -DIGL_NO_ANTTWEAKBAR -DIGL_NO_OPENGL -arch armv7s -arch armv7 -arch arm64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS7.0.sdk
+	AFLAGS_SIMULATOR = -DIGL_NO_MOSEK -DIGL_NO_ANTTWEAKBAR -DIGL_NO_OPENG -arch i386 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator7.0.sdk
 endif
 
 
