--- a/Makefile.conf
+++ b/Makefile.conf
@@ -89,6 +89,12 @@ ifeq ($(IGL_USERNAME),daniele)
 	#GG=g++-mp-4.8
 endif
 
+ifeq ($(IGL_USERNAME),olkido)
+        IGL_WITH_MATLAB=1
+	IGL_WITH_XML=1
+        AFLAGS= -m64
+endif
+
 ifeq ($(IGL_USERNAME),chrsch)
   ifeq ($(UNAME), Linux)
     DEFAULT_PREFIX=/usr
