'fixed' cheburashka model and examples to use it, draw skeletons
Former-commit-id: eb0f26d833c1086f74713a5eafa9fdcd30ec835d

--- a/examples/skeleton/Makefile
+++ b/examples/skeleton/Makefile
@@ -53,7 +53,7 @@ LIB=$(OPENGL_LIB) $(GLUT_LIB) $(ANTTWEAKBAR_LIB) $(LIBIGL_LIB) $(MATLAB_LIB) $(C
 CPP_FILES=$(wildcard ./*.cpp)
 OBJ_FILES=$(addprefix obj/,$(notdir $(CPP_FILES:.cpp=.o))) 
 
-CFLAGS+=-std=c++11 
+CFLAGS+=-std=c++11 -g
 
 example: obj $(OBJ_FILES)
 	g++ $(OPENMP) $(AFLAGS) $(CFLAGS) -o example $(OBJ_FILES) $(LIB)
