emily's username conf
Former-commit-id: c8e086450bc0d7c03cb43ad50ab1e5b8b14c865f

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -27,6 +27,23 @@ ifndef IGL_USERNAME
 	IGL_USERNAME := $(shell whoami)
 endif
 
+ifeq ($(IGL_USERNAME),whitinge)
+	DEFAULT_PREFIX=/usr/local/
+	MOSEKPLATFORM=osx64x86
+	MOSEKVERSION=7
+	IGL_WITH_TETGEN=1
+	IGL_WITH_MOSEK=1
+	IGL_WITH_BBW=1
+	IGL_WITH_SVD3X3=1
+	IGL_WITH_PNG=1
+	# I don't use llvm
+#AFLAGS = -m64 -march="corei7-avx"
+	# msse4.2 is necessary for me to get embree to compile correctly
+	AFLAGS=-m64 -msse4.2
+	OPENMP=-fopenmp
+	EIGEN3_INC=-I$(DEFAULT_PREFIX)/include/eigen3 -I$(DEFAULT_PREFIX)/include/eigen3/unsupported
+endif
+
 ifeq ($(IGL_USERNAME),ajx)
 	MOSEKPLATFORM=osx64x86
 	MOSEKVERSION=7
