--- a/examples/quicklook-mesh/Makefile
+++ b/examples/quicklook-mesh/Makefile
@@ -4,10 +4,10 @@
 # include the Foundation headers
 #CXX=llvm-g++
 #C=llvm-gcc
-#CXX=clang++
-#C=clang
-CXX=clang++-mp-3.4
-C=clang-mp-3.4
+CXX=clang++
+C=clang
+#CXX=clang++-mp-3.4
+#C=clang-mp-3.4
 CXXFLAGS += -stdlib=libc++ -std=c++11
 
 EIGEN=/opt/local/include/eigen3/
