some linux compilation fixes..

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -165,7 +165,17 @@ ifeq ($(IGL_USERNAME),stefanmessmer)
 	AFLAGS_SIMULATOR = -DIGL_NO_MOSEK -DIGL_NO_ANTTWEAKBAR -DIGL_NO_OPENG -arch i386 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator7.0.sdk
 endif
 
-
+ifeq ($(IGL_USERNAME),wenzel)
+	IGL_WITH_TETGEN=0
+	IGL_WITH_MATLAB=0
+	IGL_WITH_MOSEK=0
+	OPENGL_LIB=-lGL -lGLU
+	GLUT_LIB=-lglut
+	ANTTWEAKBAR_LIB=-lAntTweakBar
+	IGL_WITH_PNG=1
+	OPENMP=-fopenmp
+	CFLAGS += -msse4 -D__SSE4__ -DIGL_NO_MOSEK
+endif
 
 #############################################################################
 # DEFAULTS (USUALLY TO SOMETHING THAT WORKS FOR SURE ON MAC OS X
