--- a/external/medit/Makefile.igl
+++ b/external/medit/Makefile.igl
@@ -4,6 +4,9 @@ IGL=/usr/local/igl/igl_lib
 IGL_INC=-I$(IGL)/include
 IGL_LIB=-L$(IGL)/lib -ligl
 
+EIGEN=/opt/local/include/eigen3
+EIGEN_INC=-I$(EIGEN)
+
 ANTTWEAKBAR=/usr/local/igl/igl_lib/external/AntTweakBar/
 ANTTWEAKBAR_INC=-I$(ANTTWEAKBAR)/include
 ANTTWEAKBAR_LIB=-L$(ANTTWEAKBAR)/lib -lAntTweakBar -framework  AppKit
@@ -12,14 +15,14 @@ GL2PS=/opt/local/
 GL2PS_INC=-I$(GL2PS)/include
 GL2PS_LIB=-L$(GL2PS)/lib -lgl2ps
 
-INC = -I${LIBMESH} $(IGL_INC) $(ANTTWEAKBAR_INC) $(GL2PS_INC)
+INC = -I${LIBMESH} $(IGL_INC) $(ANTTWEAKBAR_INC) $(GL2PS_INC) ${EIGEN_INC}
 LIBS  = -framework OpenGL -framework GLUT -L${LIBMESH} -lmesh $(IGL_LIB) $(ANTTWEAKBAR_LIB) $(GL2PS_LIB)\
   -liglpng -L/usr/local/igl/igl_lib/external/yimg/ -lyimg\
   -L/usr/X11/lib -lpng \
   -L/usr/local/igl/igl_lib/external/AntTweakBar -lAntTweakBar \
   -I/opt/local/include -L/opt/local/lib -lboost_thread-mt -lboost_system-mt \
-#CFLAGS = -Wall -O3 -DIGL
-CFLAGS = -Wall -g -DIGL
+#CFLAGS = -Wall -g -DIGL
+CFLAGS=-Wall -O3 -DIGL
 
 C_FILES=$(wildcard *.c)
 OBJ_FILES=$(notdir $(C_FILES:.c=.o))
