--- a/external/tetgen/makefile
+++ b/external/tetgen/makefile
@@ -19,12 +19,9 @@ CXX = g++
 # -O2, -O3 ... to find the best optimization level.
 # ===================================================================
 
-#CXXFLAGS = -g
-CXXFLAGS = -O2
+CXXFLAGS = -O3
 
-# PREDCXXFLAGS is for compiling J. Shewchuk's predicates. It should
-# always be equal to -O0 (no optimization). Otherwise, TetGen may not
-# work properly.
+# PREDCXXFLAGS is for compiling J. Shewchuk's predicates. 
 
 PREDCXXFLAGS = -O0
 
@@ -39,14 +36,7 @@ PREDCXXFLAGS = -O0
 #   down the speed of TetGen.  They can be skipped by define the -DNDEBUG
 #   switch.
 
-SWITCHES = -Wall -DSELF_CHECK
-
-# SWITCHES = -Wall -Wabi -Wctor-dtor-privacy \
-#            -Woverloaded-virtual -Wno-pmf-conversions -Wsign-promo \
-#            -Wsynth  -Wchar-subscripts -Wconversion -Wsign-compare \
-#            -Wcomment  -Wimplicit -Wmissing-braces -Wparentheses \
-#            -Wreturn-type -Wswitch -Wswitch-default \
-#            -Wswitch-enum -Wtrigraphs -W -DSELF_CHECK
+SWITCHES = 
 
 # RM should be set to the name of your favorite rm (file deletion program).
 
