--- a/Makefile.conf
+++ b/Makefile.conf
@@ -47,6 +47,7 @@ endif
 ifeq ($(IGL_USERNAME),ajx)
 	MOSEKPLATFORM=osx64x86
 	MOSEKVERSION=7
+	IGL_WITH_VIEWER=1
 	IGL_WITH_TETGEN=1
 	IGL_WITH_EMBREE=1
 	IGL_WITH_MATLAB=1
