fixed path in cmake
Former-commit-id: 85a531efc2a130fc84b46e2f69c3681901e27469

--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.6)
 project(libigl_tutorials)
 
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../)
+
 # Chapter 1
 add_subdirectory("101_FileIO")
 add_subdirectory("102_DrawMesh")
