--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -29,13 +29,13 @@ add_subdirectory("305_QuadraticProgramming")
 add_subdirectory("501_HarmonicParam")
 add_subdirectory("502_LSCMParam")
 add_subdirectory("503_ARAPParam")
-#add_subdirectory("504_NRosyDesign")
-#add_subdirectory("505_MIQ")
-#add_subdirectory("506_FrameField")
+add_subdirectory("504_NRosyDesign")
+add_subdirectory("505_MIQ")
+add_subdirectory("506_FrameField")
 
 # Chapter 6
 add_subdirectory("601_Serialization")
-#add_subdirectory("602_Matlab")
+add_subdirectory("602_Matlab")
 add_subdirectory("604_Triangle")
 add_subdirectory("605_Tetgen")
 add_subdirectory("606_AmbientOcclusion")
