Added lim tutorial
Former-commit-id: e63f9f14e9bec7dae3918649b6773a460ac106f7

--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -37,3 +37,5 @@ add_subdirectory("601_Serialization")
 add_subdirectory("604_Triangle")
 add_subdirectory("605_Tetgen")
 add_subdirectory("606_AmbientOcclusion")
+
+add_subdirectory("607_LIM")
