--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -52,9 +52,10 @@ add_subdirectory("504_NRosyDesign")
 add_subdirectory("505_MIQ")
 add_subdirectory("506_FrameField")
 add_subdirectory("507_PolyVectorField")
-add_subdirectory("508_ConjugatePVF")
-add_subdirectory("509_AngleBoundPVF")
+add_subdirectory("508_ConjugateField")
 endif(LIBCOMISO_FOUND)
+add_subdirectory("509_Planarization")
+
 
 # Chapter 6
 add_subdirectory("601_Serialization")
