fix for header_only compilation without MOSEK

--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -38,9 +38,9 @@ add_subdirectory("304_LinearEqualityConstraints")
 add_subdirectory("305_QuadraticProgramming")
 
 # Chapter 4
-#add_subdirectory("401_BiharmonicDeformation")
-#add_subdirectory("402_PolyharmonicDeformation")
-#add_subdirectory("403_BoundedBiharmonicWeights")
+add_subdirectory("401_BiharmonicDeformation")
+add_subdirectory("402_PolyharmonicDeformation")
+add_subdirectory("403_BoundedBiharmonicWeights")
 
 # Chapter 5
 add_subdirectory("501_HarmonicParam")
