--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ external/tinyxml2/tinyxml2.pc
 external/yimg/showpng
 README.html
 tutorial/readme.html
+tutorial/tutorial.html
 tutorial/*/build/*
 tutorial/*/Makefile
 external/glew/build
