fix compilation errors on clang + yosemite example 403 is now skipped if mosek is not found

--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -14,6 +14,9 @@ find_package(MATLAB QUIET)
 find_package(EMBREE QUIET)
 find_package(CGAL QUIET)
 
+## Check for mosek
+find_package(MOSEK QUIET)
+
 # Chapter 1
 add_subdirectory("101_FileIO")
 add_subdirectory("102_DrawMesh")
@@ -38,7 +41,9 @@ add_subdirectory("305_QuadraticProgramming")
 # Chapter 4
 add_subdirectory("401_BiharmonicDeformation")
 add_subdirectory("402_PolyharmonicDeformation")
+if(MOSEK_FOUND)
 add_subdirectory("403_BoundedBiharmonicWeights")
+endif(MOSEK_FOUND)
 add_subdirectory("404_DualQuaternionSkinning")
 add_subdirectory("405_AsRigidAsPossible")
 add_subdirectory("406_FastAutomaticSkinningTransformations")
