rm examples from meshfix/opennl

--- a/external/MeshFix/OpenNL3.2.1/CMakeLists.txt
+++ b/external/MeshFix/OpenNL3.2.1/CMakeLists.txt
@@ -108,9 +108,9 @@ INCLUDE_DIRECTORIES(src)
 #########################################
 ADD_SUBDIRECTORY(src)
 
-IF(BUILD_EXAMPLES)
-    ADD_SUBDIRECTORY(examples)
-ENDIF(BUILD_EXAMPLES)
+#IF(BUILD_EXAMPLES)
+#    ADD_SUBDIRECTORY(examples)
+#ENDIF(BUILD_EXAMPLES)
 
 
 IF(WIN32)
