--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -78,3 +78,4 @@ if(CGAL_FOUND)
 add_subdirectory("609_Boolean")
 endif()
 add_subdirectory("701_Statistics")
+add_subdirectory("702_WindingNumber")
