--- a/examples/render_to_png/Makefile
+++ b/examples/render_to_png/Makefile
@@ -9,7 +9,9 @@ YIMG=../../external/yimg
 YIMG_LIB=-L$(YIMG) -lyimg -lz -L/usr/X11/lib -lpng -bind_at_load
 YIMG_INC=-I/usr/X11/include -I$(YIMG) 
 
-EIGEN3_INC=-I/opt/local/include/eigen3 -I/opt/local/include/eigen3/unsupported
+ifndef EIGEN3_INC
+	EIGEN3_INC=-I/opt/local/include/eigen3 -I/opt/local/include/eigen3/unsupported
+endif
 
 # LIBPNG dependency
 
