--- a/examples/affine/Makefile
+++ b/examples/affine/Makefile
@@ -9,10 +9,12 @@ include ../../build/Makefile.conf
 .PHONY: example
 
 igl_lib=../../
-eigen=$(DEFAULT_PREFIX)/include/eigen3
+ifndef EIGEN3_INC
+	EIGEN3_INC=-I$(DEFAULT_PREFIX)/include/eigen3
+endif
 
 CFLAGS+=-g
-inc=-I$(igl_lib)/include -I$(eigen)
+inc=-I$(igl_lib)/include $(EIGEN3_INC)
 lib=-L$(igl_lib)/lib -ligl
 
 example: example.o
