--- a/examples/arap/Makefile
+++ b/examples/arap/Makefile
@@ -12,7 +12,9 @@ LIBIGL=../../
 LIBIGL_INC=-I$(LIBIGL)/include
 LIBIGL_LIB=-L$(LIBIGL)/lib -ligl -liglpng -liglsvd3x3
 
-EIGEN3_INC=-I/opt/local/include/eigen3 -I/opt/local/include/eigen3/unsupported
+ifndef EIGEN3_INC
+	EIGEN3_INC=-I/opt/local/include/eigen3 -I/opt/local/include/eigen3/unsupported
+endif
 #CFLAGS+=-DIGL_HEADER_ONLY
 
 EMBREE=$(LIBIGL)/external/embree
